public interface MusicPlayer {
  void play();
  void pause();
  void selectMusic(String music);
}

