public interface Phone {
  void call(String number);
  void answer();
  void startVoicemail();
}
