public interface WebBrowser {
  void displayPage(String url);
  void addNewTab();
  void refreshPage();
}

